started to create login form

--- a/ui/src/assets/i18n/ru.json
+++ b/ui/src/assets/i18n/ru.json
@@ -12,12 +12,15 @@
     "LAST": "Фамилия",
     "EMAIL": "Електронный адрес",
     "QUESTION": "Вопрос",
-    "SEND": "Отправить"
+    "SEND": "Отправить",
+    "PASSWORD": "Введите пароль",
+    "CONFIRM_PASSWORD": "Подтвердите пароль"
   },
   "ERROR_MSG": {
     "REQUIRED": "Это поле обязательно для заполнения",
     "MIN_LENGTH": "Это поле должно содержать не менее 2 символов!",
     "MAX_LENGTH": "Это поле должно содержать не более 15 символов!",
-    "QUESTION": "Это поле должно быть заполнено в формате: somename@somename.com"
+    "QUESTION": "Это поле должно быть заполнено в формате: somename@somename.com",
+    "CONFIRM": "Пароли не вовпадают!"
   }
 }
