--- a/ui/src/assets/i18n/ua.json
+++ b/ui/src/assets/i18n/ua.json
@@ -12,12 +12,15 @@
     "LAST": "Прізвище",
     "EMAIL": "Електронна адреса",
     "QUESTION": "Питання",
-    "SEND": "Надіслати"
+    "SEND": "Надіслати",
+    "PASSWORD": "Введіть пароль",
+    "CONFIRM_PASSWORD": "Підтвердіть пароль!"
   },
   "ERROR_MSG": {
     "REQUIRED": "Це поле обов'язкове для заповнення!",
     "MIN_LENGTH": "Це поле має містити не менше 2 символів!",
     "MAX_LENGTH": "це поле має містити не иенше 15 символів!",
-    "QUESTION": "Це поле має бути заповнено в форматі: somename@somename.com"
+    "QUESTION": "Це поле має бути заповнено в форматі: somename@somename.com",
+    "CONFIRM": "Паролі не співпадають!"
   }
 }
