send letter work

--- a/ui/src/assets/i18n/ru.json
+++ b/ui/src/assets/i18n/ru.json
@@ -20,7 +20,13 @@
     "REQUIRED": "Это поле обязательно для заполнения",
     "MIN_LENGTH": "Это поле должно содержать не менее 2 символов!",
     "MAX_LENGTH": "Это поле должно содержать не более 15 символов!",
+    "EMAIL": "Фомат адреса email@email.com",
     "QUESTION": "Это поле должно быть заполнено в формате: somename@somename.com",
     "CONFIRM": "Пароли не вовпадают!"
+  },
+  "WE": {
+    "FIRST": "Индивидуальный подход",
+    "SECOND": "Опытные специалисты",
+    "THIRD": "Современная диагностика"
   }
 }
