--- a/ui/src/assets/i18n/ua.json
+++ b/ui/src/assets/i18n/ua.json
@@ -22,5 +22,10 @@
     "MAX_LENGTH": "це поле має містити не иенше 15 символів!",
     "QUESTION": "Це поле має бути заповнено в форматі: somename@somename.com",
     "CONFIRM": "Паролі не співпадають!"
+  },
+  "WE": {
+    "FIRST": "Індивиідуальний підхід",
+    "SECOND": "Досвідчені спеціалісти",
+    "THIRD": "Сучасна діагностика"
   }
 }
