created additional routes

--- a/ui/src/assets/i18n/ru.json
+++ b/ui/src/assets/i18n/ru.json
@@ -6,7 +6,8 @@
   "LINKS": {
     "ABOUT_US": "Про нас",
     "OUR_TEAM": "Наша команда",
-    "PRICE_LIST": "Прайс лист"
+    "PRICE_LIST": "Прайс лист",
+    "STOCKS": "Акции"
   },
   "FORM": {
     "FIRST": "Имя",
