--- a/ui/src/assets/i18n/ua.json
+++ b/ui/src/assets/i18n/ua.json
@@ -6,7 +6,8 @@
   "LINKS": {
     "ABOUT-US": "Про нас",
     "OUR_TEAM": "Наша команда",
-    "PRICE_LIST": "Прайс лист"
+    "PRICE_LIST": "Прайс лист",
+    "STOCKS": "Акції"
   },
   "FORM": {
     "FIRST": "Ім'я",
