added carousel? fixed form for call

--- a/ui/src/assets/i18n/ru.json
+++ b/ui/src/assets/i18n/ru.json
@@ -38,6 +38,10 @@
     "PHONES": "Наши телефоны"
   },
   "MAIN_PAGE": {
-    "WHO_WE_ARE":"Кто мы"
+    "WHO_WE_ARE": "Кто мы"
+  },
+  "MESSAGE": {
+    "ERROR": "Сообщение не отправлено!:(",
+    "SUCCESS": "Сообщение отправлено!:)"
   }
 }
