--- a/ui/src/assets/i18n/ua.json
+++ b/ui/src/assets/i18n/ua.json
@@ -31,12 +31,16 @@
     "SECOND": "Досвідчені спеціалісти",
     "THIRD": "Сучасна діагностика"
   },
-  "CONTACTS":{
+  "CONTACTS": {
     "CITY": "м.Одеса",
     "STREET": "б-р Французький дім 22, корпус 3.",
     "PHONES": "Наші телефони"
   },
   "MAIN_PAGE": {
-    "WHO_WE_ARE":"Хто ми"
+    "WHO_WE_ARE": "Хто ми"
+  },
+  "MESSAGE": {
+    "ERROR": "Повідомлення не відправлено!:(",
+    "SUCCESS": "Повідомлення відправлено!:)"
   }
 }
